libs/extractor/src/snapshots/extractor__tests__style_order_conditional_call_expression-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.mjs\",\nr#\"import { jsx as e } from \"react/jsx-runtime\";\nimport { Box as o } from \"@devup-ui/react\";\nfunction c() {\n  return e(o, { styleOrder: isActive ? 5 : 10, bg: isActive ? \"red\" : \"blue\" });\n}\nexport { c as Lib };\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: Some(
                    5,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: Some(
                    10,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: Some(
                    5,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: Some(
                    10,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport { jsx as e } from \"react/jsx-runtime\";\nfunction c() {\n\treturn e(\"div\", ((__devupValue0, __devupValue1) => ({ className: __devupValue0 ? __devupValue1 ? \"a\" : \"b\" : __devupValue1 ? \"c\" : \"d\" }))(isActive, isActive));\n}\nexport { c as Lib };\n",
}
