libs/extractor/src/snapshots/extractor__tests__style_order_conditional_coverage-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Text} from '@devup-ui/core'\n<Text styleOrder={isActive ? 5 : 10} typography={typo} />\n\",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "((__devupValue0, __devupValue1) => <span className={__devupValue0 ? ((__devupTypography) => __devupTypography ? `typo-${__devupTypography}` : \"\")(__devupValue1) : ((__devupTypography) => __devupTypography ? `typo-${__devupTypography}` : \"\")(__devupValue1)} />)(isActive, typo);\n",
}
