libs/extractor/src/snapshots/extractor__tests__style_order_conditional_coverage-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.mjs\",\nr#\"import { jsx as e } from \"react/jsx-runtime\";\nimport { Box as o } from \"@devup-ui/react\";\nfunction c() {\n  return e(o, { styleOrder: isActive ? 5 : 10 });\n}\nexport { c as Lib };\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import { jsx as e } from \"react/jsx-runtime\";\nfunction c() {\n\treturn ((__devupSpread0) => e(\"div\", {}))(isActive);\n}\nexport { c as Lib };\n",
}
